--- a/Session_3/index.html
+++ b/Session_3/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    <title>Home</title>
 </head>
 <body>
     <header>
@@ -49,7 +49,7 @@
         </div>
         <div class="features">
             <div class="feature-block">
-                <img src="./images/usability.png" alt="image of diamond">
+                <img src="./images/Icon 1.jpg" alt="image of diamond">
                 <div>
                     <h3>Usability</h3>
                     <p>Sometimes the simplest things are the hardest to find.
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="feature-block">
-                <img src="./images/parallax_effect.png" alt="Image for parallel">
+                <img src="./images/Icon 2.jpg" alt="Image for parallel">
                 <div>
                     <h3>Parallax Effect</h3>
                     <p>Sometimes the simplest things are the hardest to find.
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="feature-block">
-                <img src="./images/unlimited_colors.png" alt="image of box">
+                <img src="./images/Icon 3.jpg" alt="image of box">
                 <div>
                     <h3>Unlimited Colors</h3>
                     <p>Sometimes the simplest things are the hardest to find.
