--- a/Session_4/index.html
+++ b/Session_4/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="auto">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -77,7 +77,7 @@
                 
                     <div class="row p-3">
                         <div class="col pe-4 ">
-                            <div class="row border shadow-sm rounded border border-dark">
+                            <div class="row border shadow-sm rounded border ">
                                 <div class="col p-3">
                                     <strong class="text-start"> World</strong>
                                     <h3 class="text-start">Featured Post</h3>
@@ -93,7 +93,7 @@
                             </div>
                         </div>
                         <div class="col ps-4 ">
-                            <div class="row border shadow-sm rounded border border-dark">
+                            <div class="row border shadow-sm rounded border ">
                                 <div class="col p-3">
                                     <strong class="text-start">Design</strong>
                                     <h3 class="text-start">Post title</h3>
