--- a/Session_5/index.html
+++ b/Session_5/index.html
@@ -527,8 +527,10 @@
                                     <div class="carousel-inner">
                                         <div class="carousel-item bg-info active carousel-card-item">
                                             <div class="row d-flex justify-content-center text-center">
-                                                <div class="col-sm-12 carousel-icon">
-                                                    <i class="bi bi-twitter text-white pt-3"></i>
+                                                <div class="col-sm-12 carousel-icon text-light py-2">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
+                                                        <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334q.002-.211-.006-.422A6.7 6.7 0 0 0 16 3.542a6.7 6.7 0 0 1-1.889.518 3.3 3.3 0 0 0 1.447-1.817 6.5 6.5 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.32 9.32 0 0 1-6.767-3.429 3.29 3.29 0 0 0 1.018 4.382A3.3 3.3 0 0 1 .64 6.575v.045a3.29 3.29 0 0 0 2.632 3.218 3.2 3.2 0 0 1-.865.115 3 3 0 0 1-.614-.057 3.28 3.28 0 0 0 3.067 2.277A6.6 6.6 0 0 1 .78 13.58a6 6 0 0 1-.78-.045A9.34 9.34 0 0 0 5.026 15"/>
+                                                      </svg>
                                                 </div>
                                                 <div class="col-6 text-white">
                                                     <h2>54k</h2>
@@ -542,8 +544,10 @@
     
                                         <div class="carousel-item bg-info carousel-card-item">
                                             <div class="row d-flex justify-content-center">
-                                                <div class="col-sm-12 carousel-icon text-center">
-                                                    <i class="fa fa-twitter text-white pt-3"></i>
+                                                <div class="col-sm-12 carousel-icon text-center text-light py-2">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
+                                                        <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334q.002-.211-.006-.422A6.7 6.7 0 0 0 16 3.542a6.7 6.7 0 0 1-1.889.518 3.3 3.3 0 0 0 1.447-1.817 6.5 6.5 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.32 9.32 0 0 1-6.767-3.429 3.29 3.29 0 0 0 1.018 4.382A3.3 3.3 0 0 1 .64 6.575v.045a3.29 3.29 0 0 0 2.632 3.218 3.2 3.2 0 0 1-.865.115 3 3 0 0 1-.614-.057 3.28 3.28 0 0 0 3.067 2.277A6.6 6.6 0 0 1 .78 13.58a6 6 0 0 1-.78-.045A9.34 9.34 0 0 0 5.026 15"/>
+                                                      </svg>
                                                 </div>
                                                 <div class="col-sm-10 mx-auto text-white text-center">
                                                     <p>Lorem Ipsum is simply dummy text of the <span class="warning">#TWITTER</span> and typesetting industry.
@@ -561,8 +565,10 @@
                                     <div class="carousel-inner">
                                       <div class="carousel-item bg-primary active carousel-card-item p-3" >
                                         <div class="row d-flex justify-content-center">
-                                            <div class="col-lg-12 carousel-icon text-center">
-                                                <i class="fa fa-facebook text-white pt-3"></i>
+                                            <div class="col-lg-12 carousel-icon text-center text-light py-2">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                                                    <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
+                                                </svg>
                                             </div>
                                             <div class="col-sm-10 mx-auto text-white text-center">
                                                 <p>Lorem Ipsum is simply dummy text of the <mark>FACEBOOK </mark>and typesetting industry.</p>
@@ -570,9 +576,11 @@
                                         </div>
                                       </div>
                                       <div class="carousel-item bg-primary carousel-card-item">
-                                        <div class="row d-flex justify-content-center text-white text-center">
+                                        <div class="row d-flex justify-content-center text-light text-center py-2">
                                             <div class="col-sm-12 carousel-icon">
-                                                <i class="fa fa-facebook text-white pt-3"></i>
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-facebook " viewBox="0 0 16 16">
+                                                    <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
+                                                </svg>
                                             </div>
                                             <div class="col-6">
                                                 <h2>54k</h2>
