--- a/Session_5/index.html
+++ b/Session_5/index.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <div class="row g-0">
             <div class="col-lg-2 py-3">
-                <div class="offcanvas-lg offcanvas-start" tabindex="-1" id="offcanvasResponsive" aria-labelledby="offcanvasResponsiveLabel">
+                <div class="offcanvas-lg offcanvas-start offcanvas-custom" tabindex="-1" id="offcanvasResponsive" aria-labelledby="offcanvasResponsiveLabel">
                     <div class="offcanvas-header">
                         <h5 class="offcanvas-title" id="offcanvasResponsiveLabel">
                             <a class="link justify-content-center text-decoration-none" href="#">Annex</a>
@@ -240,7 +240,7 @@
                 <div class="top-bar custom-color text-primary py-2">
                     <nav class="navbar d-flex justify-content-between ">
                         <button class="btn btn-primary d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">
-                            <i class="bi bi-three-dots"></i>
+                            <i class="bi bi-list"></i>
                         </button>
                         <form class="d-flex ps-1">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
