--- a/Session_5/index.html
+++ b/Session_5/index.html
@@ -425,8 +425,13 @@
                 </div>
 
                 <div class="container p-0 bg-secondary-subtle">
-                    <div class="row justify-content-between">
-                        <h3>Dashboard</h3>
+                    <div class="row justify-content-between pt-3 px-2">
+                        <div class="col">
+                            <h4>Dashboard</h4>
+                        </div>
+                        <div class="col">
+                            <p class="text-secondary text-end">Annex / Dashboard</p>
+                        </div>
                     </div>
                     <div class="row justify-content-between g-0"> 
                         <div class="col-lg p-3 ">
