--- a/Session_5/index.html
+++ b/Session_5/index.html
@@ -890,6 +890,9 @@
                         </div>
                     </div>
                 </div>
+                <footer class="footer bg-secondary text-center text-light py-3">
+                    <p>© 2019 Annex by Mannatthemes.</p>
+                </footer>
             </div>
         </div>
     </div>
