--- a/Session_6/index.html
+++ b/Session_6/index.html
@@ -51,10 +51,6 @@
                     <input id="contact" class="input-field" type="text" name="Contact" placeholder="Contact">
                     
                 </div>
-                <!-- <div class="submit-button hide-element">
-                    <button type="submit" name="submit">Submit</button>
-                </div> -->
-
                 <div>
                     <p class="hide-element" id="register-id"></p>
                 </div>
@@ -107,9 +103,6 @@
                     <input type="text" class="input-field" name="Identification" placeholder="Identification">
                     
                 </div>
-                <!-- <div class="submit-button hide-element">
-                    <button type="submit"  onsubmit = "return false;" name="submit">Submit</button>
-                </div> -->
             </form>
         </div>
     </section>
@@ -129,7 +122,7 @@
                 <div class="price-block">
                     <h3 >CYCLE</h3>
                     <div class="price-circle">
-                        <span class="price">$5</span>
+                        <span class="price">₹5.00</span>
                         <span>/day</span>
                     </div>
                     <div class="select-plan">
@@ -140,7 +133,7 @@
                 <div class="price-block">
                     <h3 >CYCLE</h3>
                     <div class="price-circle">
-                        <span class="price">$100</span>
+                        <span class="price">₹100.00</span>
                         <span>/month</span>
                     </div>
                     <div class="select-plan">
@@ -150,7 +143,7 @@
                 <div class="price-block">
                     <h3 >CYCLE</h3>
                     <div class="price-circle">
-                        <span class="price">$500</span>
+                        <span class="price">₹500.00</span>
                         <span>/year</span>
                     </div>
                     <div class="select-plan">
@@ -162,7 +155,7 @@
                 <div class="price-block">
                     <h3>MOTORCYCLE</h3>
                     <div class="price-circle">
-                        <span class="price">$10</span>
+                        <span class="price">₹10.00</span>
                         <span>/day</span>
                     </div>
                     <div class="select-plan">
@@ -172,7 +165,7 @@
                 <div class="price-block">
                     <h3>MOTORCYCLE</h3>
                     <div class="price-circle">
-                        <span class="price">$200</span>
+                        <span class="price">₹200.00</span>
                         <span>/month</span>
                     </div>
                     <div class="select-plan">
@@ -182,7 +175,7 @@
                 <div class="price-block">
                     <h3>MOTORCYCLE</h3>
                     <div class="price-circle">
-                        <span class="price">$1000</span>
+                        <span class="price">₹1000.00</span>
                         <span>/year</span>
                     </div>
                     <div class="select-plan">
@@ -194,7 +187,7 @@
                 <div class="price-block">
                     <h3>FOURWHEELER</h3>
                     <div class="price-circle">
-                        <span class="price">$200</span>
+                        <span class="price">₹200.00</span>
                         <span>/day</span>
                     </div>
                     <div class="select-plan">
@@ -204,7 +197,7 @@
                 <div class="price-block">
                     <h3>FOURWHEELER</h3>
                     <div class="price-circle">
-                        <span class="price">$500</span>
+                        <span class="price">₹500.00</span>
                         <span>/month</span>
                     </div>
                     <div class="select-plan">
@@ -215,7 +208,7 @@
                 <div class="price-block">
                     <h3>FOURWHEELER</h3>
                     <div class="price-circle">
-                        <span class="price">$3500</span>
+                        <span class="price">₹3500.00</span>
                         <span>/year</span>
                     </div>
                     <div class="select-plan">
