--- a/Session_6/index.html
+++ b/Session_6/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <h1>MetaParking</h1>
+            <h1 class="heading">MetaParking</h1>
         </nav>
     </header>
 
@@ -100,8 +100,8 @@
                 <div class="input-container hide-element">
                     <label for="Identification" class="input-label">Please specify identification for vehicle</label>
                     
-                    <input type="text" class="input-field" name="Identification" placeholder="Identification">
-                    
+                    <textarea type="text" class="input-field" name="Identification" placeholder="Identification">
+                    </textarea>
                 </div>
             </form>
         </div>
